k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  namespace: production
spec:
  selector:
    app: netflix-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
